# face-hider

./: .tool-versions  README.md  pyproject.toml
headless_horseman_deep_learning/: bufferedvideoreader.py  main.py
