[tool.poetry]
name = "headless-horseman-deep-learning"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <alexandergfoley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.8.1.78"
deepface = "^0.0.79"
numpy = "^1.26.2"
tensorflow = "^2.14.0"
tensorflow-macos = [
    { version = "^2.14.0", platform = 'darwin' },
]
black = "^23.11.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
